# SlideMob

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  README.md  blackside.ipynb  config.json  config_languages.json  coverage-unit.xml  main.py  mkdocs.yaml  pyinstaller.spec  pyproject.toml  requirements.txt  setup.py  slide_mob_copy_8.ipynb  slide_mob_v1.ipynb  tox.ini
TestXml/: [Content_Types].xml
TestXml/customXml/: item2.xml  itemProps2.xml  itemProps3.xml
TestXml/docProps/: app.xml  core.xml  custom.xml
TestXml/ppt/: authors.xml  presentation.xml  revisionInfo.xml  tableStyles.xml  viewProps.xml
TestXml/ppt/_rels/: presentation.xml.rels
TestXml/ppt/changesInfos/: changesInfo1.xml
TestXml/ppt/charts/: chart1.xml
TestXml/ppt/media/: hdphoto3.wdp  image10.emf  image104.emf  image106.emf  image11.emf  image110.emf  image113.emf  image12.emf  image17.emf  image18.emf  image19.emf  image20.emf  image26.emf  image27.emf  image28.emf  image29.emf  image31.emf  image34.emf  image35.emf  image36.emf  image5.emf  image57.emf  image61.emf  image74.emf  image9.emf
TestXml/ppt/notesMasters/: notesMaster1.xml
TestXml/ppt/notesSlides/: notesSlide10.xml  notesSlide11.xml  notesSlide12.xml  notesSlide13.xml  notesSlide14.xml  notesSlide16.xml  notesSlide17.xml  notesSlide18.xml  notesSlide19.xml  notesSlide2.xml  notesSlide20.xml  notesSlide21.xml  notesSlide22.xml  notesSlide23.xml  notesSlide24.xml  notesSlide25.xml  notesSlide3.xml  notesSlide4.xml  notesSlide6.xml  notesSlide7.xml  notesSlide8.xml  notesSlide9.xml
TestXml/ppt/slideLayouts/: slideLayout100.xml  slideLayout101.xml  slideLayout103.xml  slideLayout104.xml  slideLayout105.xml  slideLayout106.xml  slideLayout107.xml  slideLayout108.xml  slideLayout109.xml  slideLayout110.xml  slideLayout111.xml  slideLayout112.xml  slideLayout113.xml  slideLayout114.xml  slideLayout115.xml  slideLayout116.xml  slideLayout117.xml  slideLayout118.xml  slideLayout119.xml  slideLayout12.xml  slideLayout120.xml  slideLayout121.xml  slideLayout122.xml  slideLayout123.xml  slideLayout124.xml  slideLayout125.xml  slideLayout126.xml  slideLayout127.xml  slideLayout128.xml  slideLayout129.xml  slideLayout13.xml  slideLayout130.xml  slideLayout131.xml  slideLayout132.xml  slideLayout133.xml  slideLayout134.xml  slideLayout135.xml  slideLayout136.xml  slideLayout137.xml  slideLayout138.xml  (+239 more)
TestXml/ppt/slideMasters/: slideMaster1.xml  slideMaster2.xml  slideMaster3.xml  slideMaster4.xml  slideMaster5.xml  slideMaster6.xml  slideMaster7.xml  slideMaster8.xml  slideMaster9.xml
TestXml/ppt/slides/: slide1.xml  slide10.xml  slide11.xml  slide12.xml  slide13.xml  slide14.xml  (+18 more)
Testpptx/: CV_Jan_Werth_DE_2024-10-23.pptx  Presentation1.pptx  translated_CV_Jan_Werth_DE_2024-10-23.pptx
Testpptx/extracted_pptx/: [Content_Types].xml
Testpptx/output/: ~$translated_2024-10-23_ASML_Regulation_and_Governance_GenAI.pptx
docs/: index.md
docs/overrides/: main.html
docs/stylesheets/: extra.css
docs/tutorials/: index.md
junit/: test-results.xml
scripts/: build_executable.py  coverage.sh  gen_ref_nav.py
scripts/ci/: install_dependencies.sh  install_pipx_alpine.sh  install_pipx_debian.sh  install_poetry.sh  print_system.sh  print_versions.sh  run_pytest.sh  run_ruff.sh  run_type_checker.sh
slidemob/: __init__.py
slidemob/core/: base.py  base_class.py  polisher.py  spellchecker.py  transformer.py  translator.py
slidemob/gui/: main.py  main_gui.py
slidemob/pipelines/: polisher.py  polisher_pipeline.py  test_pipeline.py  translator.py  translator_pipeline.py  xml_creator.py  xmlcreator_pipeline.py
slidemob/utils/: config.py  errorhandler.py  path_manager.py  promts.py
src/: config.json  config_gui.json  main.py
src/core_functions/: base_class.py  translator.py
src/error_logs/: error_log_20250118_224115.txt  error_log_20250119_220301.txt
src/gui/: main_gui.py  settings_window.py
src/pipelines/: polisher_pipeline.py  run_merger_pipeline.py  test_pipeline.py  translator_pipeline.py
src/slidemob/: __init__.py  __main__.py  config.json  config_gui.json  config_languages.json  main.py
src/utils/: model_settings.py  path_manager.py  promts.py  reasoning_model_list.json
tests/unit/: conftest.py  test_main.py  test_package_version_exists.py  test_path_manager.py
tutorials/: 1-example-notebook.py
(+604 files in other folders)
