[tool.poetry]
name = "slidemob"
version = "0.1.0"
description = "A PowerPoint translation and manipulation tool"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
python-dotenv = "^1.0.0"
python-pptx = "^0.6.21"
openai = "^1.3.0"
pydantic = "^2.0.0"
pyspellchecker = "^0.7.2"
langdetect = "^1.0.9"
ttkthemes = "^3.2.2"
typing-extensions = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
slidemob = "slidemob.gui.main_gui:main"